--- a/example.cfg
+++ b/example.cfg
@@ -4,9 +4,14 @@ dbVar = /data/Homo_sapiens/by_study
 
 [output]
 output_dir = /home/ubuntu/dbvar_data/
+# Report dir is where the report html is saved to
 report_dir = /home/ubuntu/report/
 
 [params]
 nstudies = 3
 max_size = 3e7
+#skipped_region_files is a gtf a regions to skip.  Not implemented 
+#skipped_region_files = /path/to/file
 
+[plotting]
+mpld3 = False
