numba and multiprocessing for analytics.py

--- a/example.cfg
+++ b/example.cfg
@@ -2,6 +2,7 @@
 # Folder to dbvar
 dbVar = /data/Homo_sapiens/by_study/
 
+
 [output]
 output_dir = /home/ubuntu/dbvar_data/
 # Report dir is where the report html is saved to
@@ -10,6 +11,9 @@ report_dir = /home/ubuntu/report/
 [params]
 nstudies = 3
 max_size = 3e6
+studies_include = 
+studies_exclude = 
+vartype
 #skipped_region_files is a gtf a regions to skip.  Not implemented 
 #skipped_region_files = /path/to/file
 
