get rid of the alternative variant

--- a/example.cfg
+++ b/example.cfg
@@ -1,6 +1,7 @@
 [input]
 # Folder to dbvar
 dbVar = /data/Homo_sapiens/by_study/
+make_ref = /home/ubuntu/gvf_by_studies/
 
 
 [output]
@@ -12,8 +13,9 @@ report_dir = /home/ubuntu/report/
 nstudies = 3
 max_size = 3e6
 studies_include = 
+# Example studies_exclude = nstd16,nstd84
 studies_exclude = 
-vartype
+var_type =
 #skipped_region_files is a gtf a regions to skip.  Not implemented 
 #skipped_region_files = /path/to/file
 
