--- a/py/requirements.txt
+++ b/py/requirements.txt
@@ -1,20 +1,48 @@
+numpy==1.10.2
+anaconda-client==1.2.2
+backports-abc==0.4
+backports.ssl-match-hostname==3.5.0.1
+biopython==1.66
+bx-python==0.7.3
+certifi==2015.11.20.1
+clyent==1.2.0
 cycler==0.9.0
 decorator==4.0.6
-HTSeq==0.6.1
+funcsigs==0.4
+functools32==3.2.3.post2
+HTSeq===0.6.1p1
+ipykernel==4.2.2
 ipython==4.0.1
 ipython-genutils==0.1.0
+Jinja2==2.8
+jsonschema==2.5.1
+jupyter-client==4.1.1
+jupyter-core==4.0.6
+MarkupSafe==0.23
 matplotlib==1.5.0
-numpy==1.10.2
+mistune==0.7.1
+nbconvert==4.1.0
+nbformat==4.0.1
+notebook==4.1.0
+numexpr==2.4.6
 pandas==0.17.1
 path.py==8.1.2
 pexpect==4.0.1
 pickleshare==0.5
 ptyprocess==0.5
+Pygments==2.1
 pyparsing==2.0.7
 python-dateutil==2.4.2
 pytz==2015.7
+PyYAML==3.11
+pyzmq==15.2.0
 requests==2.9.1
+scipy==0.16.1
+seaborn==0.6.0
 simplegeneric==0.8.1
-six==1.10.0
+singledispatch==3.4.0.3
+terminado==0.6
+tornado==4.3
 traitlets==4.0.0
+utils==0.9.0
 wheel==0.24.0
