add additional python packages

--- a/py/requirements.txt
+++ b/py/requirements.txt
@@ -41,6 +41,7 @@ scipy==0.16.1
 seaborn==0.6.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
+six==1.10.0
 terminado==0.6
 tornado==4.3
 traitlets==4.0.0
